fix: margins, block spaces on mobile and tablet versions

--- a/css/main.css
+++ b/css/main.css
@@ -215,12 +215,22 @@ input[type="password"]::-ms-reveal {
   .question-block:last-child {
     margin-bottom: 40px;
   }
+  .question-block.question-block--margin {
+    margin-bottom: 80px;
+  }
 }
 
 /* Mobile ----------- */
 @media only screen and (min-width: 320px) and (max-width: 480px) {
+  .question-block {
+    margin-bottom: 36px;
+  }
   .question-button {
     padding: 0 18px 0 18px;
+    margin-bottom: 8px;
+  }
+  .question-button--max-width {
+    max-width: 240px;
   }
 }
 
@@ -547,7 +557,8 @@ input[type="password"]::-ms-reveal {
 }
 
 .progress-line__line {
-  border: 3px solid #E5E5E5;
+  border: 1px solid #E5E5E5;
+  border-radius: 8px;
   font-family: 'Open Sans';
   font-style: normal;
   font-weight: normal;
@@ -641,6 +652,7 @@ input[type="password"]::-ms-reveal {
   line-height: 19px;
   color: #000;
   margin: 0;
+  font-weight: 600;
 }
 
 .bye {
