--- a/scss/questions/_questions.scss
+++ b/scss/questions/_questions.scss
@@ -158,14 +158,28 @@ and (max-width: 1089px) {
 .question-block:last-child {
   margin-bottom: 40px;
 }
+
+.question-block.question-block--margin {
+  margin-bottom: 80px;
+}
 }
 
 /* Mobile ----------- */
 @media only screen
 and (min-width: 320px)
 and (max-width: 480px) {
+  .question-block {
+    margin-bottom: 36px;
+  }
+
   .question-button {
     padding: 0 18px 0 18px;
+    margin-bottom: 8px;
+
+
+    &--max-width {
+      max-width: 240px;
+    }
   }
 }
 
