--- a/scss/questions/progress/_progress.scss
+++ b/scss/questions/progress/_progress.scss
@@ -18,7 +18,8 @@
     }
 
     &__line {
-      border: 3px solid #E5E5E5;
+      border: 1px solid #E5E5E5;
+      border-radius: 8px;
       @include setFont(11px, 15px, #E5E5E5);
     }
 
@@ -33,7 +34,7 @@
 @media only screen
 and (min-width: 320px)
 and (max-width: 480px) {
- .progress--margin {
-   margin-bottom: 35px;
- }
+  .progress--margin {
+    margin-bottom: 35px;
+  }
 }
